test-suite/tests/ui/designated/no_argument.stderr
error: an argument must match the designated parameter
  --> tests/ui/designated/no_argument.rs:7:1
   |
 7 | / impl<#[stated] S> Test<> {
 8 | |     #[stated]
 9 | |     fn foo(self) {}
10 | | }
   | |_^
